<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/_40sdp"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_20sdp"
    android:layout_marginBottom="@dimen/_40sdp"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/detalles"
                android:textSize="@dimen/txt_detalles_titulo"
                />

            <ImageView
                android:id="@+id/img_personaje"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/nombre"
                    android:textSize="@dimen/txt_detalles"
                    />

                <TextView
                    android:id="@+id/txt_nombre_personaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="Mario"
                    android:textSize="@dimen/txt_detalles"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/caracter"
                    android:textSize="@dimen/txt_detalles"
                    />

                <TextView
                    android:id="@+id/txt_caracter_personaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="Mario"
                    android:textSize="@dimen/txt_detalles"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/a_series"
                    android:textSize="@dimen/txt_detalles"
                    />

                <TextView
                    android:id="@+id/txt_amiibo_series_personaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="Super Smash Bros."
                    android:textSize="@dimen/txt_detalles"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/g_series"
                    android:textSize="@dimen/txt_detalles"
                    />

                <TextView
                    android:id="@+id/txt_game_series_personaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="Super Mario"
                    android:textSize="@dimen/txt_detalles"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/tipo"
                    android:textSize="@dimen/txt_detalles"
                    />

                <TextView
                    android:id="@+id/txt_tipo_personaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="Figure"
                    android:textSize="@dimen/txt_detalles"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/fechas_de_lanzamiento"
                android:textSize="@dimen/txt_detalles_titulo"
                />

            <TextView
                android:id="@+id/txt_fechas_personaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Figure"
                android:textSize="@dimen/txt_detalles"
                />

            <Button
                android:id="@+id/btn_aceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_detalles"
                android:text="@string/aceptar"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>